fix problem with change slid, clean the trash and styled the scrollbar

--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -3,7 +3,7 @@
   right: 0;
   left: 0;
   background: var(--bg-footer);
-  padding: 180px 0 0 0;
+  padding: 180px 0 100px 0;
   z-index: 1;
   &-description {
     flex-basis: 39%;
