--- a/src/style/_subscribe.scss
+++ b/src/style/_subscribe.scss
@@ -2,8 +2,7 @@
   position: relative;
   top: 11rem;
   background: var(--white);
-  border-radius: 10px;
-  padding: 50px 70px;
+  padding: 50px 0px;
   border-radius: 5px;
   box-shadow: 0 20px 20px var(--color-shodow-subscribe);
   margin: 0 0 60px 0;
